syntax = "proto3";
package ethermint.evm.v1;

import "gogoproto/gogo.proto";
import "ethereum/evm/v0/evm.proto";
import "ethereum/feemarket/v0/feemarket.proto";


option go_package = "github.com/functionx/fx-core/x/evm/v0/types";

// GenesisState defines the evm module's genesis state.
message GenesisState {
  // accounts is an array containing the ethereum genesis accounts.
  repeated GenesisAccount accounts = 1 [ (gogoproto.nullable) = false ];
  // params defines all the parameters of the module.
  Params params = 2 [ (gogoproto.nullable) = false ];
}

// GenesisAccount defines an account to be initialized in the genesis state.
// Its main difference between with Geth's GenesisAccount is that it uses a
// custom storage type and that it doesn't contain the private key field.
message GenesisAccount {
  // address defines an ethereum hex formated address of an account
  string address = 1;
  // code defines the hex bytes of the account code.
  string code = 2;
  // storage defines the set of state key values for the account.
  repeated State storage = 3
      [ (gogoproto.nullable) = false, (gogoproto.castrepeated) = "Storage" ];
}


message InitEvmParamsProposal {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  // the title of the update proposal
  string title = 1;
  // the description of the proposal
  string description = 2;

  // evm module params
  ethermint.evm.v1.Params evmParams = 3;

  // feeMarket module params.
  ethermint.feemarket.v1.Params feemarketParams = 4;
}